--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ h5py==3.8.0
 idna==3.4
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
+joblib==1.2.0
 keras==2.10.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
@@ -37,6 +38,7 @@ python-dateutil==2.8.2
 requests==2.30.0
 requests-oauthlib==1.3.1
 rsa==4.9
+scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
 tensorboard==2.10.1
@@ -46,6 +48,7 @@ tensorflow==2.10.1
 tensorflow-estimator==2.10.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
+threadpoolctl==3.1.0
 tqdm==4.65.0
 typing_extensions==4.5.0
 urllib3==1.26.15
